# ralph

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
.devcontainer/: .gitignore  Dockerfile  ai-sbx.yaml.template  devcontainer.json  docker-compose.base.yaml  docker-compose.override.yaml  init.sh
claude/: settings.example.json  sync.sh
claude/commands/: codex-review-task.md  codex-review.md  commit.md  create-tasks.md  implement-python-task.md  memorize-task.md  python-linters.md  ralph-batch-check.md  ralph-implement-python-task.md  ralph-interview-task.md  ralph-plan-task.md  ralph-review-code.md  ralph-review-security.md  ralph-review-simplify.md
claude/hooks/: check_workflow.py  check_workflow_ralph.py  enforce_isolated_skills.py  hook_utils.py  notify.sh
claude/skills/: code-audit.md  task-manager.md
codex/: AGENTS.md
docs/: target-architecture.md
ralph-cli/: pyproject.toml
ralph-cli/prompts/: code-reviewer.md  code-simplifier.md  codex-plan-reviewer.md  codex-reviewer.md  comment-analyzer.md  finalization.md  fix-review-issues.md  pr-test-analyzer.md  review-agent.md  review-code-reviewer.md  review-comment-analyzer.md  review-silent-failure-hunter.md  review-test-analyzer.md  security-reviewer.md  silent-failure-hunter.md
ralph-cli/ralph_cli/: __init__.py  __main__.py  cli.py  config.py  errors.py  executor.py  git.py  health.py  logging.py  mcp.py  metrics.py  monitor.py  notify.py  prompts.py  recovery.py
ralph-cli/ralph_cli/commands/: config_cmd.py  health.py  implement.py  interview.py  logs.py  notify.py  plan.py  review.py  review_chain.py
ralph-cli/tests/: conftest.py  test_cli_version.py  test_config.py  test_config_cmd.py  test_errors.py  test_executor.py  test_git.py  test_implement_codex.py  test_logs.py  test_mcp.py  test_metrics.py  test_package.py  test_plan_codex.py  test_prompts.py  test_review_chain.py
sandbox/: pyproject.toml  requirements.txt
sandbox/docs/: ARCHITECTURE.md  architecture.graphml
sandbox/ralph_sandbox/: __init__.py  cli.py  config.py  docker-compose.base.yaml  templates.py  utils.py
sandbox/ralph_sandbox/commands/: __init__.py  docker.py  doctor.py  image.py  init.py  notify.py  upgrade.py
sandbox/ralph_sandbox/commands/worktree/: __init__.py  connect.py  create.py  list.py  remove.py  utils.py
sandbox/ralph_sandbox/dockerfiles/common-settings/: CLAUDE.md  default-whitelist.txt
sandbox/ralph_sandbox/dockerfiles/devcontainer-base/: CLAUDE.md  Dockerfile  entrypoint.sh
sandbox/ralph_sandbox/dockerfiles/devcontainer-base/claude-defaults/: settings.local.json
sandbox/ralph_sandbox/dockerfiles/devcontainer-base/claude-defaults/hooks/: git_guard.py  notify.sh
sandbox/ralph_sandbox/dockerfiles/devcontainer-base/conf/: .tmux.conf  .vimrc  .zshrc  codex_config.toml
sandbox/ralph_sandbox/dockerfiles/devcontainer-base/scripts/: get-whitelist.sh  non-root-post-create.sh  run-claude.sh  run-codex.sh  setup-claude-defaults.sh  setup-p10k.sh  test-network.sh  test-permissions.sh  test-tools.sh
sandbox/ralph_sandbox/dockerfiles/devcontainer-dotnet/: Dockerfile
sandbox/ralph_sandbox/dockerfiles/devcontainer-golang/: Dockerfile
sandbox/ralph_sandbox/dockerfiles/docker-dind/: Dockerfile  entrypoint.sh
sandbox/ralph_sandbox/dockerfiles/tinyproxy/: CLAUDE.md  Dockerfile  entrypoint.sh  tinyproxy.conf
sandbox/ralph_sandbox/dockerfiles/tinyproxy-base/: Dockerfile
sandbox/ralph_sandbox/dockerfiles/tinyproxy-registry/: Dockerfile  default-registry-whitelist.txt  entrypoint.sh  tinyproxy.conf
sandbox/ralph_sandbox/resources/docker-proxy/: README.md  docker-compose.yaml
sandbox/ralph_sandbox/templates/: .gitkeep
sandbox/tests/: test_cli.py  test_config.py  test_image_commands.py  test_migration.py  test_package.py  test_templates.py  test_utils.py
tasks/: Dockerfile  pyproject.toml
tasks/ralph_tasks/: __init__.py  cli.py  core.py  core_file.py  mcp.py  storage.py  web.py
tasks/ralph_tasks/graph/: __init__.py  client.py  crud.py  schema.py
tasks/ralph_tasks/mcp/: __init__.py  planner.py  reviewer.py  swe.py  tools.py
tasks/ralph_tasks/metrics/: database.py
tasks/skills/: task-manager.md
tasks/templates/: base.html  dashboard.html  kanban.html  projects.html  tasks.html
tasks/tests/: conftest.py  docker-compose.yaml  test_attachments.py  test_core.py  test_core_file.py  test_core_neo4j.py  test_graph_client.py  test_graph_crud.py  test_graph_integration.py  test_graph_schema.py  test_mcp_roles.py  test_metrics_api.py  test_metrics_database.py  test_package.py  test_storage.py  test_version.py  test_web_mcp_mount.py  test_web_review_api.py
tests/: test_integration.py  test_workspace.py
