[project]
name = "ralph"
version = "0.0.1"
description = "Ralph monorepo — AI development automation"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["tasks", "sandbox", "ralph-cli"]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"ralph-cli/ralph_cli/cli.py" = ["B008"]  # typer.Option/Argument in defaults is required Typer pattern

[tool.pytest.ini_options]
testpaths = ["tests", "tasks/tests", "sandbox/tests", "ralph-cli/tests"]
addopts = "--import-mode=importlib"
