[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-tasks"
version = "0.0.1"
description = "Markdown-based task management with MCP server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "neo4j>=5.0",
]

[project.scripts]
ralph-tasks = "ralph_tasks.mcp:main"
tm = "ralph_tasks.cli:main"
tm-web = "ralph_tasks.web:main"

[tool.hatch.build.targets.wheel]
packages = ["ralph_tasks"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/ralph-tasks/templates"
